--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "luxon": "^2.0.2",
     "sequelize": "^6.6.5",
     "sqlite3": "^5.0.2"
   },
